--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Шапка Сайта -->
     <header>
       <nav>
-        <a href="">WebStudio</a>
+        <a href="/index.html">WebStudio</a>
         <ul>
           <li><a href="#Studio">Studio</a></li>
           <li><a href="#Portfolio">Portfolio</a></li>
@@ -40,28 +40,28 @@
       <section>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h2>Strategy</h2>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h2>Punctuality</h2>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h2>Diligence</h2>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h2>Technologies</h2>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -73,22 +73,42 @@
       <section>
         <ul>
           <li>
-            <img src="./image/team/img-1.jpg" alt="" />
+            <img
+              src="./images/img-1.jpg"
+              alt="Mark Guerrero"
+              width="264px"
+              height="260px"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./image/team/img-2.jpg" alt="" />
+            <img
+              src="./images/img-2.jpg"
+              alt="Tom Ford"
+              width="264px"
+              height="260px"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./image/team/img-3.jpg" alt="" />
+            <img
+              src="./images/img-3.jpg"
+              alt="Camila Garcia"
+              width="264px"
+              height="260px"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./image/team/img-4.jpg" alt="" />
+            <img
+              src="./images/img-4.jpg"
+              alt="Daniel Wilson"
+              width="264px"
+              height="260px"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -96,8 +116,9 @@
       </section>
     </main>
 
+    <!-- Шляпа Сайта -->
     <footer>
-      <a href="">WebStudio</a>
+      <a href="/index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
