--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="description" content="Effective Solutions for Your Business" />
-    <meta name="keywords" content="chocolate, candy, shop" />
+    <meta name="description" content="Effective Solutions for Your Business">
+    <meta name="keywords" content="chocolate, candy, shop">
     <title>Effective Solutions</title>
   </head>
 
@@ -76,9 +76,9 @@
             <img
               src="./images/img-1.jpg"
               alt="Mark Guerrero"
-              width="264px"
-              height="260px"
-            />
+              width="264"
+              height="260"
+            >
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
@@ -86,9 +86,9 @@
             <img
               src="./images/img-2.jpg"
               alt="Tom Ford"
-              width="264px"
-              height="260px"
-            />
+              width="264"
+              height="260"
+            >
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
@@ -96,9 +96,9 @@
             <img
               src="./images/img-3.jpg"
               alt="Camila Garcia"
-              width="264px"
-              height="260px"
-            />
+              width="264"
+              height="260"
+            >
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
@@ -106,9 +106,9 @@
             <img
               src="./images/img-4.jpg"
               alt="Daniel Wilson"
-              width="264px"
-              height="260px"
-            />
+              width="264"
+              height="260"
+            >
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
