change name document

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <!-- Шапка Сайта -->
+    <!-- Header -->
     <header>
       <nav>
         <a href="/index.html">WebStudio</a>
@@ -30,13 +30,13 @@
     </header>
 
     <main>
-      <!-- Основная страница сайта -->
+      <!-- Hero Section -->
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
 
-      <!-- Преимущества сайта -->
+      <!-- Section 1 -->
       <section>
         <ul>
           <li>
@@ -69,7 +69,7 @@
           </li>
         </ul>
       </section>
-      <!-- Комманда сайта -->
+      <!-- Section 2 -->
       <section>
         <ul>
           <li>
@@ -116,7 +116,7 @@
       </section>
     </main>
 
-    <!-- Шляпа Сайта -->
+    <!-- Footer -->
     <footer>
       <a href="/index.html">WebStudio</a>
       <p>
